no-pvc/uploader/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: uploader
  name: uploader
spec:
  replicas: 2
  selector:
    matchLabels:
      name: uploader
  template:
    metadata:
      labels:
        name: uploader
    spec:
      # securityContext:
      #   runAsUser: 1000580000
      #   fsGroup: 1000580000
      containers:
      - image: quay.io/rcook/tools:php-demo
        name: tools
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 2
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 2
          periodSeconds: 5
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: uploader-persistent
            mountPath: /opt/app-root/src/uploaded
      volumes:
        - name: uploader-persistent
          persistentVolumeClaim:
            claimName: uploader-pvc
