no-pvc/uploader/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: uploader
  labels:
    name: uploader
spec:
  path: "/"
  to:
    kind: Service
    name: uploader
